XO_Project_UAT/Project--XOGrp--UAT/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Lead Concierge</fullName>
        <description>Phase 1 - Lead process applicable to Concierge</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Don%27t Include</fullName>
        </values>
        <values>
            <fullName>Include</fullName>
        </values>
        <values>
            <fullName>Merged</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Lead National</fullName>
        <description>Phase 1 National</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed-Converted</fullName>
        </values>
        <values>
            <fullName>Closed-Not Converted</fullName>
        </values>
        <values>
            <fullName>Invalid</fullName>
        </values>
        <values>
            <fullName>Merged</fullName>
        </values>
        <values>
            <fullName>Open-Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Valid</fullName>
        </values>
        <values>
            <fullName>Working-Contacted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Local</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>Invalid</fullName>
        </values>
        <values>
            <fullName>Merged</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unknown</fullName>
        </values>
        <values>
            <fullName>Valid</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Average_Page_Views__c</fullName>
        <description>The average number of pages a contact sees. This is automatically set by HubSpot for each contact.</description>
        <inlineHelpText>The average number of pages a contact sees. This is automatically set by HubSpot for each contact.</inlineHelpText>
        <label>Average Page Views Per Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDR_BP_Test_Text__c</fullName>
        <description>This field is being created per SS-4588. It looks at BDR BP Test and converts it into a string so the trigger can handle it.</description>
        <formula>IF( BDR_BP_test__c = True, &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDR BP Test Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDR_BP_test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requested on SS-2742</description>
        <label>BDR BP test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDR_Test_Score__c</fullName>
        <description>SS-2986</description>
        <inlineHelpText>This field is being used as a Score field for the BDR testing that is happening. This field is manual and has no automation around it.</inlineHelpText>
        <label>BDR Test Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Broadcast_Links__c</fullName>
        <description>The number of clicks on published social messages. This is set automatically by HubSpot for each contact.</description>
        <inlineHelpText>The number of clicks on published social messages. This is set automatically by HubSpot for each contact.</inlineHelpText>
        <label>Broadcast Clicks</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CalendlyCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CalendlyCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CasesafeID__c</fullName>
        <description>This field is the 18 DIgit ID field for Lead. Added for CSP-2031</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is the 18 DIgit ID field for Lead.</inlineHelpText>
        <label>CasesafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Group__c</fullName>
        <formula>text(Primary_Category__r.Category_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Upon_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSP-1783 - This field will be used to determine if the Account generated by a Lead conversion should be claimed upon creation.</description>
        <label>Claim Upon Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConciergePrgQua__c</fullName>
        <description>Phase 1</description>
        <label>Concierge program qualification</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified for Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified from Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ConciergeState__c</fullName>
        <description>Phase 1</description>
        <label>Concierge State</label>
        <picklist>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Carolina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pennsylvania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rhode Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Carolina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vermont</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington DC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <description>Phase 1 National</description>
        <label>Current Generators</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DE_Backlog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SS-4768</description>
        <label>DE Backlog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DE_Stealth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SS-4700</description>
        <label>DE Stealth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desc__c</fullName>
        <description>Phase 1 National</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disqualification_Reason__c</fullName>
        <description>Local Lead Disqualified Reason (SF-611)</description>
        <label>Disqualification Reason</label>
        <picklist>
            <picklistValues>
                <fullName>No Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Timeline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DoNotBulkEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SF-1412 - Deprecated because of SS-1050</description>
        <label>Do Not Bulk Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoNotBulkEmail_mirror__c</fullName>
        <description>SF-1412. Only reason this field exists is we want to make the &quot;Do Not Bulk Email&quot; field map to both Accounts and Contacts on Lead conversion, and Salesforce only allows 1-to-1 mapping out of the box. This field is literally just mirrors the value of the &quot;DoNotBulkEmail__c&quot; field. - Deprecated by SS-1050</description>
        <formula>DoNotBulkEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SF-1412. Only reason this field exists is we want to make the &quot;Do Not Bulk Email&quot; field map to both Accounts and Contacts on Lead conversion, and Salesforce only allows 1-to-1 mapping out of the box. This field is literally just mirrors the value of the &quot;</inlineHelpText>
        <label>DoNotBulkEmail_mirror</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DynamicsLeadID__c</fullName>
        <description>Phase 1</description>
        <externalId>true</externalId>
        <label>Dynamics Lead ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailAccount__c</fullName>
        <description>Phase 1 National - The value of this field will be populated from Email field of Lead and will be mapped to Email__c on Account</description>
        <label>EmailAccount</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out_Reason__c</fullName>
        <description>CSP-2502</description>
        <inlineHelpText>This field is synced with the Hubspot field &quot;Suppression Reason&quot; and can only be modified by the Hubspot sync.</inlineHelpText>
        <label>Email Opt Out Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Bad Email Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard Bounced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spam Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubscribed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified: Undeliverable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Emails_Bounced__c</fullName>
        <description>The number of emails a contact has received. This is automatically set by HubSpot for each contact.</description>
        <inlineHelpText>The number of emails a contact has received. This is automatically set by HubSpot for each contact.</inlineHelpText>
        <label>Emails Bounced</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emails_Clicked__c</fullName>
        <description>The number of Marketing emails a contact has clicked, automatically set by HubSpot for each contact. This does not include emails sent or tracked in the CRM.</description>
        <inlineHelpText>The number of Marketing emails a contact has clicked, automatically set by HubSpot for each contact. This does not include emails sent or tracked in the CRM.</inlineHelpText>
        <label>Emails Clicked</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emails_Delivered__c</fullName>
        <description>The number of emails a contact has received. This is automatically set by HubSpot for each contact.</description>
        <inlineHelpText>The number of emails a contact has received. This is automatically set by HubSpot for each contact.</inlineHelpText>
        <label>Emails Delivered</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emails_Opened__c</fullName>
        <description>The number of Marketing emails a contact has opened, automatically set by HubSpot for each contact. This does not include emails sent or tracked in the CRM.</description>
        <inlineHelpText>The number of Marketing emails a contact has opened, automatically set by HubSpot for each contact. This does not include emails sent or tracked in the CRM.</inlineHelpText>
        <label>Emails Opened</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Attended__c</fullName>
        <description>Description When the contact has attended an event</description>
        <inlineHelpText>Description When the contact has attended an event</inlineHelpText>
        <label>Last Attended Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_RSVP__c</fullName>
        <description>Description of the event that is rsvp&apos;ed</description>
        <inlineHelpText>Description of the event that is rsvp&apos;ed</inlineHelpText>
        <label>Last Registered Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Clicks__c</fullName>
        <description>The number clicks on links shared on Facebook</description>
        <inlineHelpText>The number clicks on links shared on Facebook</inlineHelpText>
        <label>Facebook Clicks</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Clicked_Date__c</fullName>
        <description>The date of the first click from any Marketing email to this contact. This does not include emails sent or tracked in the CRM.</description>
        <inlineHelpText>The date of the first click from any Marketing email to this contact. This does not include emails sent or tracked in the CRM.</inlineHelpText>
        <label>First Email Clicked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Open_Date__c</fullName>
        <description>The date of the first open from any Marketing email to this contact. This does not include emails sent or tracked in the CRM.</description>
        <inlineHelpText>The date of the first open from any Marketing email to this contact. This does not include emails sent or tracked in the CRM.</inlineHelpText>
        <label>First Email Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Referrer__c</fullName>
        <description>The first website that referred a contact to your website. This is automatically set by HubSpot for each contact.</description>
        <label>First Referrer</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Send_Date__c</fullName>
        <description>The date of the first email sent to this contact.</description>
        <inlineHelpText>The date of the first email sent to this contact.</inlineHelpText>
        <label>First Email Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Timestamp__c</fullName>
        <description>The first time a contact has been seen. This is automatically set by HubSpot for each contact.</description>
        <inlineHelpText>The first time a contact has been seen. This is automatically set by HubSpot for each contact.</inlineHelpText>
        <label>First Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Visit_Timestamp__c</fullName>
        <description>The first time a contact visited your website. This is automatically set by HubSpot for each contact.</description>
        <inlineHelpText>The first time a contact visited your website. This is automatically set by HubSpot for each contact.</inlineHelpText>
        <label>First Visit Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <description>SF-610</description>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fulfill_Storefront__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fulfill Storefront</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfilled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the Storefront has been fulfilled in Partners.</inlineHelpText>
        <label>Fulfilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Data__c</fullName>
        <inlineHelpText>Fulfillment data received from Partners</inlineHelpText>
        <label>Fulfillment Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Google_Doc_ID__c</fullName>
        <externalId>true</externalId>
        <label>Google Doc ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Google_Plus_Clicks__c</fullName>
        <description>The number clicks on links shared on Google Plus</description>
        <inlineHelpText>The number clicks on links shared on Google Plus</inlineHelpText>
        <label>Google Plus Clicks</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <label>Home</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HubSpot_Score__c</fullName>
        <description>This field will update the Hubspot score on a record.</description>
        <label>HubSpot Score</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_Temperature__c</fullName>
        <description>HubSpot Temperature will indicate the temperature of a record in HubSpot</description>
        <label>HubSpot Temperature</label>
        <picklist>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super Hot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IfOtherpleasespecify__c</fullName>
        <description>Phase 1 National</description>
        <label>If Other, please specify:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Set__c</fullName>
        <formula>IF(
   LEN(Google_Doc_ID__c) &gt; 0,
   IF(
      BEGINS(Google_Doc_ID__c,&apos;NY&apos;),
      1,
   IF(
      OR(BEGINS(Google_Doc_ID__c,&apos;NE&apos;), BEGINS(Google_Doc_ID__c,&apos;LR&apos;), BEGINS(Google_Doc_ID__c,&apos;PA&apos;)),
      2,
   IF(
      OR(BEGINS(Google_Doc_ID__c,&apos;CON-GA-&apos;), BEGINS(Google_Doc_ID__c,&apos;CON-CR-&apos;), BEGINS(Google_Doc_ID__c,&apos;CON-DC-&apos;)),
      3,
   IF(
      BEGINS(Google_Doc_ID__c,&apos;CON-FL&apos;),
      4,
   IF(
      BEGINS(Google_Doc_ID__c,&apos;CON-TX&apos;),
      5,
   IF(
      OR(BEGINS(Google_Doc_ID__c,&apos;CON-SCA&apos;),BEGINS(Google_Doc_ID__c,&apos;CON-NCA&apos;)),
      6,
   IF(
      OR(BEGINS(Google_Doc_ID__c,&apos;CON-SCA&apos;),BEGINS(Google_Doc_ID__c,&apos;NJ&apos;)),
      7,
      99
     )
     )
     )
     )
     )
     )
     )
   ,NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Import Set</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_in_Adv_in_Multiple_Categories__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest in Adv in Multiple Categories</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invalid_Reason__c</fullName>
        <label>Invalid Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No contact information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsHotLeadSource__c</fullName>
        <formula>OR( 
ISPICKVAL( LeadSource , &quot;Inbound Email&quot;),
ISPICKVAL( LeadSource , &quot;Inbound Phone&quot;),
ISPICKVAL( LeadSource , &quot;Website&quot;),
ISPICKVAL( LeadSource , &quot;Paid Media&quot;),
ISPICKVAL( LeadSource , &quot;Self Prospecting&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsHotLeadSource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Klout_Score__c</fullName>
        <description>A contact&apos;s Klout score, a measure of Internet influeence</description>
        <inlineHelpText>A contact&apos;s Klout score, a measure of Internet influeence</inlineHelpText>
        <label>Klout Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA_Rep__c</fullName>
        <description>CSP-3178</description>
        <label>LOA Rep</label>
        <picklist>
            <picklistValues>
                <fullName>Jackie Ornellas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarah Rucinski</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heather Dorsten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cecelia Groark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stacy Brambilia</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <formula>LastActivityDate</formula>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Clicked_Date__c</fullName>
        <description>The date of the most recent click from any Marketing email to this contact. This does not include emails sent or tracked in the CRM.</description>
        <inlineHelpText>The date of the most recent click from any Marketing email to this contact. This does not include emails sent or tracked in the CRM.</inlineHelpText>
        <label>Last Email Clicked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Contacted_Date__c</fullName>
        <label>Last Contacted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Email_Name__c</fullName>
        <description>The name of the last Marketing email sent to this contact. This does not include emails sent or tracked in the CRM.</description>
        <inlineHelpText>The name of the last Marketing email sent to this contact. This does not include emails sent or tracked in the CRM.</inlineHelpText>
        <label>Last Email Sent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Open_Date__c</fullName>
        <description>The date of the most recent open from any Marketing email to this contact. This does not include emails sent or tracked in the CRM.</description>
        <inlineHelpText>The date of the most recent open from any Marketing email to this contact. This does not include emails sent or tracked in the CRM.</inlineHelpText>
        <label>Last Email Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Referrer__c</fullName>
        <description>The last website that referred a contact to your website. This is automatically set by HubSpot for each contact.</description>
        <inlineHelpText>The last website that referred a contact to your website. This is automatically set by HubSpot for each contact.</inlineHelpText>
        <label>Last Referrer</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Registered_Event_Date__c</fullName>
        <description>SS-3608 Need this Date data point to start a heavy-lift project.</description>
        <label>Last Registered Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Result_Date__c</fullName>
        <description>For Local: SF-610</description>
        <label>Last Result Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Result__c</fullName>
        <defaultValue>&quot;New&quot;</defaultValue>
        <description>Request for Local (SF-610)</description>
        <label>Last Result</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Salesforce_Sync_Time__c</fullName>
        <description>CSP-3141: Represents the last time that information on the contact was synced with Hubspot so that I can identify the &quot;master&quot; contact syncing to Hubspot</description>
        <inlineHelpText>Last time that information on the contact was synced with Hubspot so that I can identify the &quot;master&quot; contact syncing to Hubspot</inlineHelpText>
        <label>Last Salesforce Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Send_Date__c</fullName>
        <description>The date of the last email sent to this contact.</description>
        <inlineHelpText>The date of the last email sent to this contact.</inlineHelpText>
        <label>Last Email Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Social_Engagement_Date__c</fullName>
        <description>The date of the most recent click on a published social message. This is set automatically by HubSpot for each contact.</description>
        <inlineHelpText>The date of the most recent click on a published social message. This is set automatically by HubSpot for each contact.</inlineHelpText>
        <label>Last Social Engagement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Timestamp__c</fullName>
        <description>The last time and date a contact has viewed a page on your website.</description>
        <inlineHelpText>The last time and date a contact has viewed a page on your website.</inlineHelpText>
        <label>Last Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Visit_Timestamp__c</fullName>
        <description>The last time and date a contact visited your website.</description>
        <inlineHelpText>The last time and date a contact visited your website.</inlineHelpText>
        <label>Last Visit Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadBU__c</fullName>
        <description>Phase 1</description>
        <label>Lead BU</label>
        <picklist>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LeadSourceAcc__c</fullName>
        <description>Phase 1 National - this field is used to copied Lead Source to Account Source</description>
        <label>LeadSourceAcc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadToAccountConversionFlag_c__c</fullName>
        <defaultValue>true</defaultValue>
        <description>csp-1840</description>
        <label>LeadToAccountConversionFlag__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Creator_Type__c</fullName>
        <description>CSP-2453 Used to judge Whether owner skip assignment user or not</description>
        <label>Lead Creator Type</label>
        <picklist>
            <picklistValues>
                <fullName>Skip Assignment Rule</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Status_Formula__c</fullName>
        <formula>TEXT(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Sub_Source__c</fullName>
        <globalPicklist>Lead_Sub_Source</globalPicklist>
        <label>Lead Sub Source</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Temperature__c</fullName>
        <label>Lead Temperature</label>
        <picklist>
            <picklistValues>
                <fullName>Cold</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Linkedin_Clicks__c</fullName>
        <description>The number clicks on links shared on LinkedIn</description>
        <inlineHelpText>The number clicks on links shared on LinkedIn</inlineHelpText>
        <label>Linkedin Clicks</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocalAccExec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Phase 1</description>
        <label>Local Account Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>